# shieldops-sdk

./: .gitattributes  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HITL-SETUP.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_advisory.md
.github/scripts/: assemble_release_evidence.sh
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: api-reference.md  configuration.md  onboarding.md  troubleshooting.md
eval/: README.md
examples/: README.md  crewai_app.py  crewai_crew.py  custom_policies.py  fastapi_app.py  flask_app.py  langchain_agent.py  langchain_app.py  langchain_goal_drift.py  standalone_interceptor.py
src/shieldops_sdk/: __init__.py  _response.py  async_client.py  client.py  config.py  exceptions.py  interceptor.py  models.py  telemetry.py
src/shieldops_sdk/_policy/: __init__.py  _defaults.py
src/shieldops_sdk/experimental/: __init__.py  autogen.py  openai_agents.py
src/shieldops_sdk/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  llamaindex.py  openai_agents.py
src/shieldops_sdk/resources/: __init__.py  agents.py  investigations.py  remediations.py  security.py  vulnerabilities.py
tests/: test_async_client.py  test_client.py  test_config.py  test_crewai_integration.py  test_exceptions.py  test_experimental.py  test_firewall_e2e.py  test_interceptor.py  test_langchain_integration.py  test_llamaindex_integration.py  test_models.py  test_packaging.py  test_policy_defaults.py  test_promoted_integrations.py  test_py_typed.py  test_resources.py  test_task_scope.py  test_telemetry.py  test_telemetry_modes.py
tests/integration/sigstore/: conftest.py  test_staging_round_trip.py
