[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shieldops-sdk"
version = "1.1.0"
description = "AI Security Control Plane SDK — intercept and govern AI agent tool calls"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "ShieldOps", email = "sdk@shieldops.io" },
]
keywords = ["ai", "security", "agent", "firewall", "governance", "llm", "mcp", "langchain", "crewai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
crewai = ["crewai>=0.1.0"]
llamaindex = ["llama-index-core>=0.10.0"]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
all = [
    "shieldops-sdk[langchain,crewai,llamaindex,otel]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://shieldops.io"
Documentation = "https://docs.shieldops.io/sdk"
Repository = "https://github.com/shieldops/shieldops-sdk"
Changelog = "https://github.com/shieldops/shieldops-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/shieldops_sdk"]

[tool.hatch.build.targets.sdist]
exclude = [
    "__pycache__",
    "*.pyc",
    "dist/",
    ".pytest_cache/",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
