[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shieldops-sdk"
version = "0.1.3"
description = "AI Security Control Plane SDK — intercept and govern AI agent tool calls"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "ShieldOps", email = "sdk@shieldops.io" },
]
keywords = ["ai", "security", "agent", "firewall", "governance", "llm", "mcp", "langchain", "crewai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
crewai = ["crewai>=0.1.0"]
llamaindex = ["llama-index-core>=0.10.0"]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
all = [
    "shieldops-sdk[langchain,crewai,llamaindex,otel]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4.0",
    "mypy>=1.13",
    "sigstore>=3.0",
]

[project.urls]
# NOTE: shieldops-io/shieldops-sdk is the target public repo. Until the
# public carve lands (Phase 5+), these URLs may not resolve. Update them in
# lockstep with the actual public repo creation.
Homepage = "https://github.com/shieldops-io/shieldops-sdk"
Documentation = "https://github.com/shieldops-io/shieldops-sdk#readme"
Repository = "https://github.com/shieldops-io/shieldops-sdk"
Issues = "https://github.com/shieldops-io/shieldops-sdk/issues"
Changelog = "https://github.com/shieldops-io/shieldops-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/shieldops_sdk"]

[tool.hatch.build.targets.sdist]
exclude = [
    "__pycache__",
    "*.pyc",
    "dist/",
    ".pytest_cache/",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
# Conditional imports (opentelemetry behind a try/ImportError block;
# sigstore only in tests) shouldn't fail strict mode when the user runs
# `pip install -e ".[dev]"` without the extras. The runtime guards in
# telemetry.py + the test guards in tests/integration/sigstore/ keep the
# fallbacks honest.
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "opentelemetry",
    "opentelemetry.*",
    "sigstore",
    "sigstore.*",
]
ignore_missing_imports = true
